vcluster_versioned_docs/version-0.26.0/integrations/pod-identity/eks-pod-identity.mdx
---
title: EKS Pod Identity
sidebar_label: EKS Pod Identity
sidebar_position: 1
---

import CodeBlock from '@theme/CodeBlock';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem'
import GlossaryTerm from '@site/src/components/GlossaryTerm'

import Deploy from '../../_partials/deploy/deploy.mdx'
import GetResourceName from '../pod-identity/_partials/get-resource-name.mdx'
import EKSPodIdentityScript from '!!raw-loader!../pod-identity/_code/eks-pod-identity.sh'
import EKSPodIdentityTerraform from '!!raw-loader!../pod-identity/_code/eks-pod-identity.tf'
import VClusterYaml from '!!raw-loader!../pod-identity/_code/pod-identity-vcluster.yaml'

import ProAdmonition from '../../_partials/admonitions/pro-admonition.mdx'

<ProAdmonition/>

# Integrate EKS Pod Identity with vCluster

This tutorial guides you through the process of integrating AWS Service Accounts with your <GlossaryTerm term="vcluster">vCluster</GlossaryTerm> using Pod Identity.

Setting up Pod Identity requires you to link an AWS Service Account with the Kubernetes Service Account (KSA) used by your workloads.
This KSA needs to be available in the <GlossaryTerm term="host-cluster">host cluster</GlossaryTerm> in which your vCluster instance runs.

To achieve this setup, use the [sync.toHost feature][sync-toHost-docs] to expose the KSA in the host cluster together with the <GlossaryTerm term="platform">platform</GlossaryTerm> API to retrieve the updated name of the KSA in the host cluster.

### Prerequisites
This guide assumes you have the following prerequisites:
- `kubectl` installed
- `aws` CLI installed and configured
- An existing EKS cluster with the CSI driver set up, IAM OIDC provider, and Pod Identity agent deployed

### Step-by-step guide

#### 1. Start the platform and create an access key

In order to integrate your workloads with EKS Pod Identity, you'll need a platform instance running.
If you don't have one already, follow the [platform installation guide][vcluster-platform-install-link].

Once you're done, you'll need to create a new <GlossaryTerm term="access-key">access key</GlossaryTerm>. This allows you to use the platform API.
Follow this [guide to create a new access key][access-key-link].


#### 2. Set up variables

<Tabs>

<TabItem value="bash">
Define the necessary environment variables for your EKS cluster, service accounts, and authentication details.

```bash
#!/bin/bash

# Set up environment variables
export AWS_REGION="eu-central-1"  # Replace with your AWS region
export CLUSTER_NAME="pod-identity-1"  # Replace with your EKS cluster name
export SERVICE_ACCOUNT_NAME="demo-sa"
export SERVICE_ACCOUNT_NAMESPACE="default"
export VCLUSTER_NAME="my-vcluster"
export HOST=https://your.loft.host  # Replace with your host
export ACCESS_KEY=abcd1234  # Replace with your access key
export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
```
</TabItem>

<TabItem value="Terraform">
```hcl
variable "aws_region" {
  description = "The AWS region to deploy the EKS cluster"
  type        = string
  default     = "eu-central-1"
}

variable "cluster_name" {
  description = "The name of the EKS cluster"
  type        = string
  default     = "pod-identity-1"
}

variable "service_account_name" {
  description = "K8s SA name for Pod Identity binding"
  type        = string
  default     = "demo-sa"
}

variable "service_account_namespace" {
  description = "Namespace in which k8s SA is created"
  type        = string
  default     = "default"
}

variable "vcluster_name" {
  description = "Name of virtual cluster"
  type        = string
  default     = "my-vcluster"
}

variable "auth_token" {
  description = "Auth token for vCluster.Pro API"
  type        = string
  default     = "abcd1234"
}
```
</TabItem>

</Tabs>

#### 3. Create vCluster configuration

Create the `vcluster.yaml` file with following content:

```yaml
sync:
  toHost:
    serviceAccounts:
      enabled: true
```

#### 4. Deploy vCluster

<Deploy />


#### 5. Connect to vCluster

Establish a connection to your vCluster instance:

```bash
vcluster connect ${VCLUSTER_NAME}
```

#### 6. Create example workload

Create an example workload to list S3 buckets.

```bash
# Create example-workload.yaml content dynamically
cat <<EOF > example-workload.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: demo-sa
  namespace: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-list-buckets
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3-list-buckets
  template:
    metadata:
      labels:
        app: s3-list-buckets
    spec:
      serviceAccountName: demo-sa
      containers:
      - image: public.ecr.aws/aws-cli/aws-cli
        command:
          - "aws"
          - "s3"
          - "ls"
        name: aws-pod
EOF

kubectl apply -f example-workload.yaml
```

#### 7. Read updated name from platform API

<GetResourceName />

#### 8. Create IAM policy and role for Pod Identity

<Tabs>

<TabItem value="bash">

Create IAM policy and role for pod identity.

```bash
cat >my-policy.json <<EOF
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Effect": "Allow",
            "Action": "s3:GetObject",
            "Resource": "arn:aws:s3:::*"
        }
    ]
}
EOF

aws iam create-policy --policy-name my-policy --policy-document file://my-policy.json

cat >trust-relationship.json <<EOF
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Sid": "AllowEksAuthToAssumeRoleForPodIdentity",
            "Effect": "Allow",
            "Principal": {
                "Service": "pods.eks.amazonaws.com"
            },
            "Action": [
                "sts:AssumeRole",
                "sts:TagSession"
            ]
        }
    ]
}
EOF

aws iam create-role --role-name my-role --assume-role-policy-document file://trust-relationship.json --description "my-role-description"

aws iam attach-role-policy --role-name my-role --policy-arn=arn:aws:iam::${AWS_ACCOUNT_ID}:policy/my-policy
```

Create the pod identity association.

:::info Namespace configuration
The namespace parameter depends on your vCluster deployment type:
- **Standalone vCluster** (not using the platform): Use the namespace where vCluster is deployed
- **Platform-managed vCluster**: The namespace follows the pattern `loft-<project-name>-v-<vcluster-name>`
:::

<Tabs groupId="deployment-type">
<TabItem value="standalone" label="Standalone vCluster">

For standalone vCluster deployments (deployed with `vcluster create` or Helm without the platform):

```bash
# Set the namespace where vCluster is deployed
export VCLUSTER_NAMESPACE="team-x"  # Replace with your actual namespace

aws eks create-pod-identity-association \
  --cluster-name ${CLUSTER_NAME} \
  --role-arn arn:aws:iam::${AWS_ACCOUNT_ID}:role/my-role \
  --namespace ${VCLUSTER_NAMESPACE} \
  --service-account ${KSA_NAME}
```

</TabItem>
<TabItem value="platform" label="Platform-managed vCluster">

For vCluster deployments managed by the platform with a <GlossaryTerm term="project">project</GlossaryTerm>:

```bash
# Set project name and construct the namespace
export PROJECT_NAME="my-project"  # Replace with your actual project name
export PLATFORM_NAMESPACE="loft-${PROJECT_NAME}-v-${VCLUSTER_NAME}"

aws eks create-pod-identity-association \
  --cluster-name ${CLUSTER_NAME} \
  --role-arn arn:aws:iam::${AWS_ACCOUNT_ID}:role/my-role \
  --namespace ${PLATFORM_NAMESPACE} \
  --service-account ${KSA_NAME}
```

</TabItem>
</Tabs>

</TabItem>

<TabItem value="Terraform">
```hcl
data "aws_iam_policy_document" "assume_role" {
  statement {
    effect = "Allow"

    principals {
      type        = "Service"
      identifiers = ["pods.eks.amazonaws.com"]
    }

    actions = [
      "sts:AssumeRole",
      "sts:TagSession"
    ]
  }
}

resource "aws_iam_role" "example" {
  name               = "eks-pod-identity-example"
  assume_role_policy = data.aws_iam_policy_document.assume_role.json
}

resource "aws_iam_role_policy_attachment" "example_s3" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess"
  role       = aws_iam_role.example.name
}
```
</TabItem>

</Tabs>

#### 9. Verify the setup

Verify the setup by checking the logs.

```bash
kubectl logs -l app=s3-list-buckets -n default
```

[vcluster-platform-install-link]: /platform/install/quick-start-guide
[access-key-link]: /docs/platform/administer/authentication/access-keys
[sync-toHost-docs]: ../../configure/vcluster-yaml/sync/to-host/README.mdx
